# omegahive

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  notifier.env.example  pyproject.toml  secrets-manifest.yaml
deploy/: git_bundle.sh  phantom_ahead.sh
docs/: omegahive_architecture.md  omegahive_c2_battery_spec.md  omegahive_c2_v0a_v2_order.md  omegahive_deployment_spec.md  omegahive_design_1_1.md  omegahive_hive_native_ops.md  omegahive_m0_spec.md  omegahive_m1_spec.md  omegahive_m4_spec.md  omegahive_m5_spec.md  omegahive_o2_fork_patches.md  omegahive_omegaclaw_binding.md  omegahive_port_fixes_D1-D5.md  omegahive_port_spec.md  omegahive_recovery_runbook.md  omegahive_remote_access_spec.md  omegahive_session_agents.md  omegahive_spec_1_1.md  omegahive_stage2_fixes_A1-A4.md  omegahive_stage2_spec.md  omegahive_stage2_verdict.md  omegahive_test_plan.md  omegahive_ui_spec.md  omegahive_v0_spec.md  omegahive_v0b_order.md  omegahive_v3_fixes_B1-B6.md  omegahive_v3_kb_persona_brief.md
experiments/: README.md
ladder/: README.md  __init__.py  actor.py  board.py  cli.py  freeze.py  gate.py  grid.py  knowledge.py  metrics.py  opsheet.py  parse.py  pricing.py  report.py  runner.py  seeds.py  smoke.py  vanilla.py  view.py  workers.py
migrations/: 0001_events.sql  0002_write_path.sql
qual/: __init__.py  aggregate.py  bundle.py  capture.py  cli.py  fork_backend.py  loader.py  metrics.py  record.py  runner.py  schema.py  smoke_fork.py
scenarios/: demo_plan.yaml  f1_review_failed_reopen.yaml  f2_worker_rejects.yaml  f3_worker_fails.yaml  f4_blocked_escalate.yaml  f5_stale_assignment.yaml  f6_noisy_failure.yaml  k1_fork.yaml  m0_smoke.yaml  m1_smoke.yaml  rp1_clean.yaml  rp1_messy.yaml  rp1_wobbly.yaml  rp2_clean.yaml  rp2_messy.yaml  rp2_wobbly.yaml  s1_flaky_worker.yaml
scripts/: deploy_checks.sh  hive-answer  hive-close  hive-common.sh  hive-launch  hive-tooling-drill.sh  init-test-db.sql  pg_backup.sh  pg_restore_check.sh  readme_demo.sh
tests/: _canonical.py  conftest.py  port_harness.py  qual_bundles.py  test_additive_fields.py  test_aggregation.py  test_append.py  test_board_json.py  test_bump_generation_cli.py  test_coordinator_failures.py  test_coordinator_greedy.py  test_detectors_runner.py  test_distribution_invariants.py  test_emit_cli.py  test_engine_determinism.py  test_engine_happy_path.py  test_failure_metrics.py  test_failure_scenarios.py  test_fold_budget.py  test_freeze_invariants.py  test_gate.py  test_gateway.py  test_h6_detectors.py  test_human_view.py  test_kjoins_prune.py  test_ladder_closed_loop.py  test_ladder_freeze.py  test_ladder_gate.py  test_ladder_grid.py  test_ladder_knowledge.py  test_ladder_llm_client.py  test_ladder_metrics.py  (+48 more)
(+197 files in other folders)
