[project]
name = "omegahive"
version = "0.0.0"
description = "OmegaHive M0 — event-log spine with deterministic replay"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.scripts]
omegahive = "omegahive.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omegahive"]

[tool.pytest.ini_options]
testpaths = ["tests"]
