[project]
name = "omegahive"
version = "0.0.0"
description = "OmegaHive M0 — event-log spine with deterministic replay"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "psycopg[binary]>=3.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "litellm>=1.91.0",
]

[project.scripts]
omegahive = "omegahive.cli:app"
qual = "qual.cli:app"
ladder = "ladder.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/omegahive", "qual", "ladder"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests", "qual", "ladder"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests", "qual", "ladder"]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
